# voice-changer

./: .gitignore  GEMINI.md  LICENSE  README.md  package-lock.json
.cursor/: rules
.github/workflows/: build.yml
Docker/: Dockerfile  docker-compose.yaml  requirements.txt
client/app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/app/src/: App.svelte  main.ts
client/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/app/src-tauri/src/: main.rs
client/core/: Cargo.toml
client/core/src/: lib.rs
docs/adr/: 0000-plan.md  0001-architecture-overview.md  0002-latency-targets.md  0003-monorepo-structure.md  steps.md
docs/runbooks/: dev-setup.md
server/api/: main.py
server/pipeline/: asr_tts.py  voice_conversion.py
server/stream/: ws.py
